--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "next": "13.4.4",
     "next-auth": "^4.22.1",
     "npm": "^9.7.1",
+    "pusher": "^5.1.3",
+    "pusher-js": "^8.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
