--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "@hookform/resolvers": "^3.1.0",
     "@next-auth/upstash-redis-adapter": "^3.0.4",
     "@pridestalkerr/adapter-redis": "^1.0.1",
@@ -18,12 +19,14 @@
     "@types/react-dom": "18.2.4",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.6.0",
+    "date-fns": "^2.30.0",
+    "encoding": "^0.1.13",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "install": "^0.13.0",
     "ioredis": "^5.3.2",
     "lucide-react": "^0.241.0",
-    "next": "13.4.4",
+    "next": "13.4.1",
     "next-auth": "^4.22.1",
     "npm": "^9.7.1",
     "pusher": "^5.1.3",
@@ -32,6 +35,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
     "react-hot-toast": "^2.4.1",
+    "react-loading-skeleton": "^3.3.1",
+    "react-textarea-autosize": "^8.4.1",
     "tailwind-merge": "^1.13.1",
     "typescript": "5.1.3",
     "zod": "^3.21.4"
